--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 -r requirements/server.txt
 --extra-index-url https://download.pytorch.org/whl/cu121
-# --extra-index-url https://download.pytorch.org/whl/cu118
-torch>=2.1.0
-transformers==4.38.0
+torch==2.5.0
+transformers>=4.41.0,<5.0.0
+fsspec==2024.10.0
 auto-gptq
 sentencepiece
 bitsandbytes
