--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -r requirements/server.txt
 --extra-index-url https://download.pytorch.org/whl/cu121
 torch==2.5.0
-transformers>=4.41.0,<5.0.0
+transformers>=4.38.0
 fsspec==2024.10.0
 auto-gptq
 sentencepiece
